--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -31,8 +31,8 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world! github.event.inputs.artifact_url
+      - name: Run a one-line script - TEST
+        run: echo Hello, world! ${{ github.event.inputs.artifact_url }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
