--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -34,8 +34,11 @@ jobs:
       - name: Run a one-line script - TEST
         run: echo Hello, world! ${{ github.event.inputs.artifact_url }}
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # Export the solution from the artifact created by pipelines
+      - name: download solution from artifact
+        env:
+            CLIENT_ID: ${{secrets.CLIENT_ID}}   
+            TENANT_ID: ${{secrets.TENANT_ID}}   
+            CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
+        shell: pwsh
+        run: echo Tenants ID is ${{secrets.TENANT_ID}}
